--- a/composer.json
+++ b/composer.json
@@ -1,10 +1,12 @@
 {
     "name": "alpetg/wishlist",
-    "description": "This is my package wishlist",
+    "description": "Make Models wishlistable",
     "keywords": [
         "AlpetG",
         "laravel",
-        "wishlist"
+        "wishlist",
+        "package",
+        "laravel-package"
     ],
     "homepage": "https://github.com/alpetg/wishlist",
     "license": "MIT",
@@ -16,7 +18,7 @@
         }
     ],
     "require": {
-        "php": "^8.1",
+        "php": "^8.0",
         "spatie/laravel-package-tools": "^1.13.0",
         "illuminate/contracts": "^9.0"
     },
